[package]
name = "tempest"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
num_enum = "0.7.4"
rand = "0.9.2"
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.20"

[dev-dependencies]
ctor = "0.5.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = "0.31.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing-core = "0.1.34"
tracing-opentelemetry = "0.32.0"

# examples
[[example]]
name = "tempest-otel"
path = "examples/tempest-otel.rs"

